--- a/Challenge 004 - Prompt Calculation/index.html
+++ b/Challenge 004 - Prompt Calculation/index.html
@@ -7,11 +7,193 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prompt: Calculation</title>
   </head>
   <body>
+    <div
+      class="container-fluid custom-container border border-2 border-black bg-dark-subtle"
+    >
+      <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10">
+          <label
+            for="exampleTextarea"
+            class="form-label border border-2 border-black mt-1"
+            >99999999999999999999999999999</label
+          >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            %
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            CE
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            C
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-backspace"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M5.83 5.146a.5.5 0 0 0 0 .708L7.975 8l-2.147 2.146a.5.5 0 0 0 .707.708l2.147-2.147 2.146 2.147a.5.5 0 0 0 .707-.708L9.39 8l2.146-2.146a.5.5 0 0 0-.707-.708L8.683 7.293 6.536 5.146a.5.5 0 0 0-.707 0z"
+              />
+              <path
+                d="M13.683 1a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-7.08a2 2 0 0 1-1.519-.698L.241 8.65a1 1 0 0 1 0-1.302L5.084 1.7A2 2 0 0 1 6.603 1zm-7.08 1a1 1 0 0 0-.76.35L1 8l4.844 5.65a1 1 0 0 0 .759.35h7.08a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1z"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            1/x</button
+          ><button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            x^2</button
+          ><button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            cbrt(x)</button
+          ><button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            ÷
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-success w-100 w-50 border rounded border-2 border-black"
+          >
+            7</button
+          ><button
+            type="button"
+            class="btn btn-success w-100 w-50 border rounded border-2 border-black"
+          >
+            8</button
+          ><button
+            type="button"
+            class="btn btn-success w-100 w-50 border rounded border-2 border-black"
+          >
+            9</button
+          ><button
+            type="button"
+            class="btn btn-primary w-100 w-50 border rounded border-2 border-black"
+          >
+            x
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            4</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            5</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            6</button
+          ><button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            -
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            1</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            2</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            3</button
+          ><button
+            type="button"
+            class="btn btn-primary w-50 border rounded border-2 border-black"
+          >
+            +
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex">
+          <button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            +/-</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            0</button
+          ><button
+            type="button"
+            class="btn btn-success w-50 border rounded border-2 border-black"
+          >
+            ,</button
+          ><button
+            type="button"
+            class="btn btn-warning w-50 border rounded border-2 border-black"
+          >
+            =
+          </button>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
